src/styles/IntroductionModal.css
* {
  color: black;
}

h1 {
  font-size: 48px;
  margin-bottom: 16px;
}

li {
  font-size: 32px;
  margin-left: 32px;
}

.modal-container {
  background: rgba(255, 255, 255, 0.4);
  color: #00fbff;
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  border: 1px solid rgba(255, 255, 255, 0.2);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
  text-align: center;
  z-index: 1000;
  position: absolute;
  display: flex;
  justify-content: center;
  padding-top: 48px;
  width: 100vw;
  height: 100svh;
}

.inner-modal {
  height: 390px;
}

.instructions-container {
  display: flex;
  flex-direction: column;
  align-items: baseline;
}

.list-button-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.agree-btn {
  font-weight: 600;
  font-size: 32px;
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  border: 1px solid rgba(255, 255, 255, 0.2);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
  text-align: center;
  width: 150px;
  height: 60px;
  border-radius: 50px;
  transition: transform 0.1s;
}

.agree-btn:hover {
  transform: scale(1.05);
}

